# c-game-engine

./: Makefile.am  configure.ac
engine/includes/: engine.h
engine/includes/audio/: init.h
engine/includes/entity/: entity.h  init.h  physics.h
engine/includes/event/: event.h
engine/includes/init/: main.h
engine/includes/log/: init.h
engine/includes/object/: init.h  object.h
engine/includes/render/: init.h  render.h  shapes.h  texture.h
engine/includes/ui/: button.h  text.h
engine/src/audio/: init.c
engine/src/entity/: entity.c  init.c  physics.c
engine/src/event/: event.c
engine/src/init/: main.c
engine/src/object/: init.c  object.c
engine/src/render/: init.c  render.c  shapes.c  texture.c
engine/src/ui/: button.c  text.c  ui.c
