AM_CPPFLAGS = "-Iengine/includes"
AM_CPPFLAGS += $(LIBFREETYPE_CFLAGS)
LIBS += $(LIBFREETYPE_LIBS)
noinst_PROGRAMS = game

game_SOURCES = \
engine/src/audio/audio.c \
engine/src/audio/init.c \
engine/src/init/crash.c \
engine/src/init/main.c \
engine/src/world/worldgen.c \
engine/src/ui/text.c \
engine/src/ui/ui.c \
engine/src/ui/percentbar.c \
engine/src/ui/button.c \
engine/src/entities/player.c \
engine/src/entities/world.c \
engine/src/entities/enemy.c \
engine/src/entities/test.c \
engine/src/entities/bullet.c \
engine/src/entities/healthbar.c \
engine/src/entities/pickup.c \
engine/src/object/object.c \
engine/src/object/init.c \
engine/src/event/event.c \
engine/src/log/log.c \
engine/src/log/init.c \
engine/src/entity/physics.c \
engine/src/entity/entity.c \
engine/src/entity/init.c \
engine/src/render/render.c \
engine/src/render/texture.c \
engine/src/render/shapes.c \
engine/src/render/init.c \
engine/src/utils/perlin.c \
engine/src/utils/graphs/graph.c \
engine/src/utils/dynarray.c \
engine/src/utils/dictionary.c \
engine/src/utils/stack.c \
engine/src/utils/memoryhandler.c \
engine/src/utils/random.c \
engine/src/vector/vector.c \
engine/includes/audio/audio_header.h \
engine/includes/audio/init.h \
engine/includes/init/main.h \
engine/includes/init/crash.h \
engine/includes/init/init_header.h \
engine/includes/world/world_header.h \
engine/includes/ui/text.h \
engine/includes/ui/percentbar.h \
engine/includes/ui/button.h \
engine/includes/ui/ui_header.h \
engine/includes/entities/player.h \
engine/includes/entities/enemy.h \
engine/includes/entities/healthbar.h \
engine/includes/entities/pickup.h \
engine/includes/entities/entities_header.h \
engine/includes/entities/world.h \
engine/includes/entities/bullet.h \
engine/includes/object/object_header.h \
engine/includes/object/object.h \
engine/includes/object/init.h \
engine/includes/event/event_header.h \
engine/includes/event/event.h \
engine/includes/log/log.h \
engine/includes/log/log_header.h \
engine/includes/log/init.h \
engine/includes/entity/entity_header.h \
engine/includes/entity/entity.h \
engine/includes/entity/physics.h \
engine/includes/entity/init.h \
engine/includes/render/renderer_header.h \
engine/includes/render/texture.h \
engine/includes/render/render.h \
engine/includes/render/shapes.h \
engine/includes/render/init.h \
engine/includes/engine.h \
engine/includes/utils/graph.h \
engine/includes/utils/dictionary.h \
engine/includes/utils/random.h \
engine/includes/utils/utils_header.h \
engine/includes/utils/dynarray.h \
engine/includes/utils/stack.h \
engine/includes/utils/memoryhandler.h \
engine/includes/utils/perlin.h \
engine/includes/utils/ansicolours.h \
engine/includes/vector/vector_header.h \
engine/includes/vector/vector.h
